[package]
name = "rhy"
version = "0.2.1"
edition = "2021"
description = "A tool for track file state"
readme = "README.md"
authors = ["95028 <950288s@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
dirs="1.0.3"
regex = "1"
serde_yaml="0.9.34"
walkdir = "2.3"

[package.metadata.deb]
maintainer = "95028 <950288s@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "A tool for track file state"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/rhy", "usr/bin/", "755"],
    ["LICENSE", "/usr/share/doc/rhy/LICENSE", "0644"],
    ["README.md", "usr/share/doc/thy/README", "0644" ],
]
