[package]
name = "rhy"
version = "0.3.6"
edition = "2024"
about = "A tool for track file state"
readme = "README.md"
authors = ["95028 <950288s@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
dirs="6.0.0"
regex = "1.11.1"
yaml-rust2 = "0.10.0"
walkdir = "2.5.0"

[package.metadata.deb]
maintainer = "95028 <950288s@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "A tool for track file state"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/rhy", "usr/bin/", "755"],
    ["LICENSE", "/usr/share/doc/rhy/LICENSE", "0644"],
    ["README.md", "usr/share/doc/thy/README", "0644" ],
]
